# Unity2GStreamer

./: .gitignore  .gitmodules  Enhancements.txt  Packet structure documentation.odt  README.md  UnityLiveStreaming.sln  build.sh  clean.sh  linux_installdeps.sh
DummyServer/: CCTVServer.cpp  CCTVServer.h  CMakeLists.txt  DummyServer.sln  DummyServer.vcxproj  DummyServer.vcxproj.filters  main.cpp
DummyServer/x64/Release/: DummyServer.exe.recipe  DummyServer.iobj  DummyServer.ipdb
DummyServer/x64/Release/DummyServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DummyServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EncodingClient/: CRtspSession.cpp  CStreamer.cpp  CStreamer.h  EncodingClient.sln  LockFreeQueue.h  NetworkDefines.h  RTSPServer.cpp  RTSPTestServer.vcxproj  RTSPTestServer.vcxproj.filters  StreamDataManager.cpp  StreamDataManager.h  stdafx.h
OnvifTest/: OnvifServer.h  OnvifTest.cpp  OnvifTest.vcxproj  OnvifTest.vcxproj.filters
PluginSource/source/: CCTVServer.cpp  CCTVServer.h  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp  gstRtsp.cpp  gstRtsp.h
U2G_Client/: CMakeLists.txt  U2G_Client.cpp  U2G_Client.sln  U2G_Client.vcxproj  U2G_Client.vcxproj.filters
UnityProject/Assets/: AsyncReadback.compute  Demo.anim  Sphere 1.controller  Sphere.controller  Tex.renderTexture  UseRenderingPlugin.cs  scene.unity
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityProject/UserSettings/: EditorUserSettings.asset
(+16 files in other folders)
